--- a/Practica2/app/src/main/AndroidManifest.xml
+++ b/Practica2/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Practica2">
         <activity
+            android:name=".AleatorioActivity"
+            android:exported="false" />
+        <activity
             android:name=".GanadorActivity"
             android:exported="false" />
         <activity
