--- a/StreetFighter/app/src/main/AndroidManifest.xml
+++ b/StreetFighter/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.streetfighter" >
+    package="com.example.streetfighter">
 
     <application
         android:allowBackup="true"
@@ -8,16 +8,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.StreetFighter" >
+        android:theme="@style/Theme.StreetFighter">
+        <activity
+            android:name=".FightActivity"
+            android:exported="false"
+            android:screenOrientation="landscape"/>
         <activity
             android:name=".GameActivity"
             android:exported="false"
-            android:screenOrientation="landscape"/>
-
+            android:screenOrientation="landscape" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
